Bug 256823 - Kmail Message viewer crashes when trying to view source
Summary: Kmail Message viewer crashes when trying to view source
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.89
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-13 17:45 UTC by simon
Modified: 2010-11-19 20:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description simon 2010-11-13 17:45:49 UTC
Application: kmail (2.0.89)
KDE Platform Version: 4.5.76 (4.6 >= 20101111) (Compiled from sources)
Qt Version: 4.7.1
Operating System: Linux 2.6.36-rc4 x86_64
Distribution (Platform): Gentoo Packages

-- Information about the crash:
- What I was doing when the application crashed:

hi,

clicked a file in my local Mail folders, messageviewer popped up, showing nothing (just white pane), tried to view messassage source -> bang

The crash can be reproduced every time.

-- Backtrace:
Application: KMail (kmail), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fd9accc7740 (LWP 26241))]

Thread 2 (Thread 0x7fd992e30910 (LWP 26245)):
#0  0x00007fd9a7d7e189 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fd99e8033b2 in WTF::TCMalloc_PageHeap::scavengerThread() () from /usr/lib64/qt4/libQtWebKit.so.4
#2  0x00007fd99e8033e9 in WTF::TCMalloc_PageHeap::runScavengerThread(void*) () from /usr/lib64/qt4/libQtWebKit.so.4
#3  0x00007fd9a7d7a297 in start_thread () from /lib/libpthread.so.0
#4  0x00007fd9a9f038cd in clone () from /lib/libc.so.6
#5  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fd9accc7740 (LWP 26241)):
[KCrash Handler]
#6  KMime::Content::d_func (this=0x0) at /var/tmp/portage/kde-base/kdepimlibs-9999/work/kdepimlibs-9999/kmime/kmime_content.h:767
#7  0x00007fd9a6946633 in KMime::Content::encodedContent (this=0x0, useCrLf=false) at /var/tmp/portage/kde-base/kdepimlibs-9999/work/kdepimlibs-9999/kmime/kmime_content.cpp:277
#8  0x00007fd9a361479f in MessageViewer::ViewerPrivate::slotShowMessageSource() () from /usr/lib/libmessageviewer.so.4
#9  0x00007fd9a3607562 in MessageViewer::Viewer::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libmessageviewer.so.4
#10 0x00007fd9aa843607 in QMetaObject::activate (sender=0xbaf4b0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x7fff50650ab0) at kernel/qobject.cpp:3272
#11 0x00007fd9aad2cda2 in QAction::triggered (this=0x0, _t1=false) at .moc/debug-shared/moc_qaction.cpp:263
#12 0x00007fd9aad2e590 in QAction::activate (this=0xbaf4b0, event=<value optimized out>) at kernel/qaction.cpp:1257
#13 0x00007fd9ab1c3b79 in QMenuPrivate::activateCausedStack (this=0xc2cb10, causedStack=..., action=0xbaf4b0, action_e=Trigger, self=true) at widgets/qmenu.cpp:993
#14 0x00007fd9ab1c9c97 in QMenuPrivate::activateAction (this=0xc2cb10, action=0xbaf4b0, action_e=Trigger, self=true) at widgets/qmenu.cpp:1085
#15 0x00007fd9ac7742f5 in KMenu::mouseReleaseEvent (this=0xc1b960, e=0x7fff506519d0) at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kdeui/widgets/kmenu.cpp:471
#16 0x00007fd9aad92fe5 in QWidget::event (this=0xc1b960, event=0x7fff506519d0) at kernel/qwidget.cpp:8200
#17 0x00007fd9ab1cc0bb in QMenu::event (this=0xc1b960, e=0x7fff506519d0) at widgets/qmenu.cpp:2410
#18 0x00007fd9aad34906 in QApplicationPrivate::notify_helper (this=0x650310, receiver=0xc1b960, e=0x7fff506519d0) at kernel/qapplication.cpp:4445
#19 0x00007fd9aad3c4ae in QApplication::notify (this=<value optimized out>, receiver=0xc1b960, e=0x7fff506519d0) at kernel/qapplication.cpp:4006
#20 0x00007fd9ac6b1691 in KApplication::notify (this=0x7fff50652620, receiver=0xc1b960, event=0x7fff506519d0)
    at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kdeui/kernel/kapplication.cpp:311
#21 0x00007fd9aa829943 in QCoreApplication::notifyInternal (this=0x7fff50652620, receiver=0xc1b960, event=0x7fff506519d0) at kernel/qcoreapplication.cpp:732
#22 0x00007fd9aad3afc1 in sendEvent (event=<value optimized out>, receiver=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#23 QApplicationPrivate::sendMouseEvent (event=<value optimized out>, receiver=<value optimized out>) at kernel/qapplication.cpp:3105
#24 0x00007fd9aadc830b in QETWidget::translateMouseEvent (this=0xc1b960, event=<value optimized out>) at kernel/qapplication_x11.cpp:4372
#25 0x00007fd9aadc6d25 in QApplication::x11ProcessEvent (this=0x7fff50652620, event=0x7fff506521b0) at kernel/qapplication_x11.cpp:3564
#26 0x00007fd9aadf2152 in x11EventSourceDispatch (s=0x653ca0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#27 0x00007fd9a29b688c in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#28 0x00007fd9a29ba540 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#29 0x00007fd9a29ba7cb in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#30 0x00007fd9aa858cac in QEventDispatcherGlib::processEvents (this=0x650130, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#31 0x00007fd9aadf1a2f in QGuiEventDispatcherGlib::processEvents (this=0x0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#32 0x00007fd9aa8286a2 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#33 0x00007fd9aa828a84 in QEventLoop::exec (this=0x7fff506524e0, flags=...) at kernel/qeventloop.cpp:201
#34 0x00007fd9aa82afc4 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#35 0x0000000000403149 in main (argc=<value optimized out>, argv=<value optimized out>) at /var/tmp/portage/kde-base/kmail-9999/work/kmail-9999/kmail/main.cpp:145

Reported using DrKonqi
Comment 1 Torgny Nyblom 2010-11-19 20:46:20 UTC
SVN commit 1198796 by tnyblom:

Prevent view source when a message is not set.

BUG: 256823


 M  +2 -0      viewer_p.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1198796