Prevent view source when a message is not set.

BUG: 256823

svn path=/trunk/KDE/kdepim/messageviewer/; revision=1198796